Updated .git ignore to ignore more logs. Updated fixtures with Asaph's data

--- a/dashboard2/spec/fixtures/publishers.yml
+++ b/dashboard2/spec/fixtures/publishers.yml
@@ -38,9 +38,14 @@ test2:
    site_url: "http://www.example.com"
    brand_safety_level: 1
 
-jguitar:
+jguitar2:
+   #Asaph asked to be number 1
    id: 1047
+   site_name: "Jguitar - oldid"
+   brand_safety_level: 5
+
+jguitar:
+   id: 1
    site_name: "Jguitar"
    site_url: "http://www.jguitar.com"
    brand_safety_level: 5
-
