--- a/dashboard2/spec/fixtures/tag_options.yml
+++ b/dashboard2/spec/fixtures/tag_options.yml
@@ -1,11 +1,24 @@
 one:
   id: 1
-  tag_id: 1
-  option_name: test_accountid
-  option_value: 123456
+  option_name: ad_client
+  option_value: pub-4338851863733765
+  tag_id: 13
 
 two:
   id: 2
-  tag_id: 1
-  option_name: test_option
-  option_value: "gaming and entertainment"
+  option_name: ad_slot
+  option_value: 4136033084
+  tag_id: 13
+
+three:
+  id: 3
+  option_name: ad_client
+  option_value: pub-4338851863733765
+  tag_id: 21
+
+four:
+  id: 4
+  option_name: ad_slot
+  option_value: 4136033084
+  tag_id: 21
+
