--- a/dashboard2/spec/fixtures/tags.yml
+++ b/dashboard2/spec/fixtures/tags.yml
@@ -134,7 +134,7 @@ malformedjs:
   tag: 'This is a tag with bad javascript that should throw an error. <script>badjavascript.tag11()</script>'
 
 rejectionhop:
-  id            : 13
+  id            : 14
   tag_name      : 'Test2: MR Rejection Time Hop'
   network_id    : 42
   publisher_id  : 1046
@@ -147,7 +147,7 @@ rejectionhop:
   tag           : '<script>document.write("This is a hop from a chain with a rejection time");</script><script src="http://delivery.dev.liftium.com/js/hop.js"></script>'
 
 rejectionfill:
-  id            : 14
+  id            : 15
   tag_name      : 'Test2: MR Rejection Time Fill'
   network_id    : 42
   publisher_id  : 1046
@@ -159,7 +159,7 @@ rejectionfill:
   tag           : 'This is an always fill from a chain with a rejection time'
 
 frequencycap:
-  id            : 15
+  id            : 16
   tag_name      : 'Test2 : LR Frequency Cap Fill'
   network_id    : 42
   publisher_id  : 1046
@@ -173,7 +173,7 @@ frequencycap:
   tag           : '<script>document.write("This is a fill from a chain with a frequency cap");</script>'
 
 frequencyfill:
-  id            : 16
+  id            : 17
   tag_name      : 'Test2 : LR Frequency Cap Always Fill'
   network_id    : 42
   publisher_id  : 1046
@@ -183,4 +183,65 @@ frequencyfill:
   tier          : 1
   size          : '336x280'
   tag           : '<script>document.write("This is an always_fill after a tag with a frequency cap");</script>'
+
+asaph:
+  id: 13
+  tag_name: Jguitar Bottom LB
+  network_id: 1
+  publisher_id: 1
+  value: 0.25
+  enabled: 1
+  always_fill: 1
+  tier: 1
+  size: "728x90"
+  tag: '<script type="text/javascript"><!--
+google_ad_client = "pub-4338851863733765";
+google_ad_width = 728;
+google_ad_height = 90;
+google_ad_format = "728x90_as";
+google_ad_type = "text_image";
+//2007-05-08: Footer
+google_ad_channel = "5882775727";
+google_color_border = "FFFFFF";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_text = "000000";
+google_color_url = "008000";
+//-->
+</script>
+<script type="text/javascript"
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>'
+
+asaph2:
+  id: 21
+  tag_name: Jguitar Bottom LB
+  network_id: 1
+  publisher_id: 1
+  value: 0.25
+  enabled: 1
+  always_fill: 1
+  tier: 1
+  size: "728x90"
+  tag: '<script type="text/javascript"><!--
+google_ad_client = "pub-4338851863733765";
+google_ad_width = 728;
+google_ad_height = 90;
+google_ad_format = "728x90_as";
+google_ad_type = "text_image";
+//2007-05-08: Footer
+google_ad_channel = "5882775727";
+google_color_border = "FFFFFF";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_text = "000000";
+google_color_url = "008000";
+//-->
+</script>
+<script type="text/javascript"
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>'
+
+
+
 
